# autonomous-strategy-engine

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: race_config.yaml
configs/tracks/: monza.yaml  silverstone.yaml  spa.yaml
configs/tyres/: compounds.yaml
docs/: race_simulator_design.md  rl_strategy_design.md  tyre_model.md
experiments/: baseline_strategy_eval.py  monte_carlo_race_test.py  rl_training_experiment.py  run_inference.py
logs/ppo_f1/PPO_1/: events.out.tfevents.1772779854.Sherlock.9876.0
logs/ppo_f1/PPO_2/: events.out.tfevents.1772780723.Sherlock.23904.0
logs/ppo_f1/PPO_3/: events.out.tfevents.1772822106.Sherlock.34104.0
logs/ppo_f1/PPO_4/: events.out.tfevents.1772824155.Sherlock.9924.0
logs/ppo_f1/PPO_5/: events.out.tfevents.1773071654.Sherlock.13536.0
logs/ppo_f1/PPO_6/: events.out.tfevents.1773072610.Sherlock.22616.0
logs/ppo_f1/PPO_7/: events.out.tfevents.1773073777.Sherlock.32936.0
src/: __init__.py
src/core/: fuel_model.py  lap_time_model.py  safety_car_model.py  tyre_model.py  weather_model.py
src/ml/: lap_time_residual_model.py  safety_car_prediction.py  tyre_parameter_estimation.py
src/rl/: environment.py  policy_inference.py  reward_function.py  train_agent.py
src/simulation/: monte_carlo.py  pit_stop_model.py  race_engine.py  race_state.py
src/strategy/: rule_based_strategy.py  strategy_evaluator.py  undercut_model.py
src/utils/: distributions.py  logging.py  random.py
tests/: test_lap_time_model.py  test_race_engine.py  test_strategy_eval.py  test_tyre_model.py
(+2 files in other folders)
