[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "f1-race-strategy-simulator"
version = "0.1.0"
description = "Physics-Informed Monte Carlo F1 Race Strategy Simulator with ML-Assisted Optimisation"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
